# podcatser

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt
config/: config.yml
podcatser/config/: config_example.yml
podcatser/control/: control.py
podcatser/scripts/: main.py
